@@ -4,7 +4,7 @@ running configure, to aid debugging if configure makes a mistake.
 It was created by gcmtool configure 0.2.4d, which was
 generated by GNU Autoconf 2.57.  Invocation command line was
 
-  $ ./configure --target=i386
+  $ ./configure --target=i386 target_alias=i386 --no-create --no-recursion
 
 ## --------- ##
 ## Platform. ##
@@ -32,8 +32,8 @@ Kernel configured for a single processor only.
 Processor type: ppc7450 (PowerPC 7450)
 Processor active: 0
 Primary memory available: 1280.00 megabytes.
-Default processor set: 96 tasks, 243 threads, 1 processors
-Load average: 2.03, Mach factor: 0.28
+Default processor set: 80 tasks, 201 threads, 1 processors
+Load average: 2.04, Mach factor: 0.23
 unknown
 /bin/machine           = unknown
 /usr/bin/oslevel       = unknown
@@ -136,27 +136,6 @@ configure:2619: result: gcc3
 configure:2636: checking for a BSD-compatible install
 configure:2690: result: /usr/bin/install -c
 configure:2811: creating ./config.status
-
-## ---------------------- ##
-## Running config.status. ##
-## ---------------------- ##
-
-This file was extended by gcmtool config.status 0.2.4d, which was
-generated by GNU Autoconf 2.57.  Invocation command line was
-
-  CONFIG_FILES    = 
-  CONFIG_HEADERS  = 
-  CONFIG_LINKS    = 
-  CONFIG_COMMANDS = 
-  $ ./config.status 
-
-on Mookid.local
-
-config.status:647: creating Makefile
-config.status:647: creating src/Makefile
-config.status:751: creating src/config.h
-config.status:836: src/config.h is unchanged
-config.status:942: executing depfiles commands
 
 ## ---------------- ##
 ## Cache variables. ##
@@ -268,3 +247,38 @@ target_alias='i386'
 #define VERSION "0.2.4d"
 
 configure: exit 0
+
+## ---------------------- ##
+## Running config.status. ##
+## ---------------------- ##
+
+This file was extended by gcmtool config.status 0.2.4d, which was
+generated by GNU Autoconf 2.57.  Invocation command line was
+
+  CONFIG_FILES    = 
+  CONFIG_HEADERS  = 
+  CONFIG_LINKS    = 
+  CONFIG_COMMANDS = 
+  $ ./config.status Makefile
+
+on Mookid.local
+
+config.status:647: creating Makefile
+
+## ---------------------- ##
+## Running config.status. ##
+## ---------------------- ##
+
+This file was extended by gcmtool config.status 0.2.4d, which was
+generated by GNU Autoconf 2.57.  Invocation command line was
+
+  CONFIG_FILES    = 
+  CONFIG_HEADERS  = 
+  CONFIG_LINKS    = 
+  CONFIG_COMMANDS = 
+  $ ./config.status src/Makefile depfiles
+
+on Mookid.local
+
+config.status:647: creating src/Makefile
+config.status:942: executing depfiles commands
